--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -6,49 +6,38 @@
 #    By: dcaetano <dcaetano@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/04 17:50:20 by dcaetano          #+#    #+#              #
-#    Updated: 2024/01/25 08:46:19 by dcaetano         ###   ########.fr        #
+#    Updated: 2025/02/16 08:36:22 by dcaetano         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-RED				= \033[1;91m
-GREEN			= \033[1;92m
-YELLOW			= \033[1;93m
-CYAN			= \033[1;96m
-RESET			= \033[1;0m
+CXX          = c++
+CXXFLAGS     = -Wall -Wextra -Werror -std=c++98
+RM           = rm -rf
 
-CXX				= c++
-CXXFLAGS		= -Wall -Wextra -Werror -std=c++98
-RM				= rm -rf
+OBJS_DIR     = obj/
+INCLUDES_DIR = ./
 
-OBJS_DIR		= obj/
-INCLUDES_DIR	= ./
+SRCS         = Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp \
+               PresidentialPardonForm.cpp RobotomyRequestForm.cpp main.cpp
 
-SRCS			= Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp \
-					PresidentialPardonForm.cpp RobotomyRequestForm.cpp \
-					main.cpp
+OBJS         = $(addprefix $(OBJS_DIR), $(SRCS:.cpp=.o))
 
-OBJS			= $(addprefix $(OBJS_DIR), $(SRCS:.cpp=.o))
-
-EXEC			= beeblebrox
+EXEC         = beeblebrox
 
 all: $(EXEC)
 
 $(OBJS_DIR)%.o: ./%.cpp
 	@mkdir -p $(dir $@)
-	@echo "$(YELLOW)Compiling $(CYAN)$<$(RESET)..."
 	@$(CXX) $(CXXFLAGS) -I$(INCLUDES_DIR) -c $< -o $@
 
 $(EXEC): $(OBJS)
 	@$(CXX) $(CXXFLAGS) -I$(INCLUDES_DIR) $^ -o $@
-	@echo "$(CYAN)$(EXEC) $(GREEN)created$(RESET)!"
 
 clean:
 	@$(RM) $(OBJS_DIR)
-	@echo "$(CYAN)Objects $(RED)removed$(RESET)!"
 
 fclean: clean
 	@$(RM) $(EXEC)
-	@echo "$(CYAN)$(EXEC) $(RED)removed$(RESET)!"
 
 re: fclean all
 
@@ -56,5 +45,4 @@ re: fclean all
 delete:
 	@$(RM) *_shrubbery
 
-.PHONY: all clean fclean re
-
+.PHONY: all clean fclean re delete
