--- a/cpp-module-05/ex01/Makefile
+++ b/cpp-module-05/ex01/Makefile
@@ -5,38 +5,85 @@
 #                                                     +:+ +:+         +:+      #
 #    By: dcaetano <dcaetano@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/12/04 17:50:20 by dcaetano          #+#    #+#              #
-#    Updated: 2025/02/16 00:17:56 by dcaetano         ###   ########.fr        #
+#    Created: 2025/04/01 17:23:24 by dcaetano          #+#    #+#              #
+#    Updated: 2025/04/03 15:20:21 by dcaetano         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CXX          = c++
-CXXFLAGS     = -Wall -Wextra -Werror -std=c++98
-RM           = rm -rf
+# === BINARY ================================================================= #
 
-OBJS_DIR     = obj/
-INCLUDES_DIR = ./
+NAME      = form
+LIB       = $(NAME).a
 
-SRCS         = Bureaucrat.cpp Form.cpp main.cpp
+# === COMMANDS =============================================================== #
 
-OBJS         = $(addprefix $(OBJS_DIR), $(SRCS:.cpp=.o))
+CPP       = c++
+MK        = mkdir
+RM        = rm
+AR_RCS    = ar rcs
 
-EXEC         = form
+# === DIRECTORIES ============================================================ #
 
-all: $(EXEC)
+INCS_D    = .
+SRCS_D    = .
+OBJS_D    = objs
 
-$(OBJS_DIR)%.o: ./%.cpp
-	@mkdir -p $(dir $@)
-	@$(CXX) $(CXXFLAGS) -I$(INCLUDES_DIR) -c $< -o $@
+# === EXTENSIONS ============================================================= #
 
-$(EXEC): $(OBJS)
-	@$(CXX) $(CXXFLAGS) -I$(INCLUDES_DIR) $^ -o $@
+CPP_EXT   = .cpp
+HPP_EXT   = .hpp
+OBJ_EXT   = .o
+
+# === FILES ================================================================== #
+
+CLASSES   = Bureaucrat Form
+CPPFILES  = $(CLASSES)
+HPPFILES  = $(CLASSES)
+
+INCS      = $(addprefix $(INCS_D)/, \
+                        $(addsuffix $(HPP_EXT), \
+                        $(HPPFILES)))
+SRCS      = $(addprefix $(SRCS_D)/, \
+                        $(addsuffix $(CPP_EXT), \
+                        $(CPPFILES)))
+OBJS      = $(patsubst $(SRCS_D)/%$(CPP_EXT), \
+                       $(OBJS_D)/$(SRCS_D)/%$(OBJ_EXT), \
+                       $(SRCS))
+
+MAIN_CPP  = main$(CPP_EXT)
+MAIN_OBJ  = $(patsubst %$(CPP_EXT), \
+                       $(OBJS_D)/%$(OBJ_EXT), \
+                       $(MAIN_CPP))
+
+# === FLAGS ================================================================== #
+
+CPP_FLAGS = -Wall -Wextra -Werror -std=c++98
+MK_FLAGS  = -p
+RM_FLAGS  = -rfv
+
+# === RULES ================================================================== #
+
+all: $(NAME)
+
+$(OBJS_D)/%$(OBJ_EXT): %$(CPP_EXT) $(INCS)
+	@$(MK) $(MK_FLAGS) $(dir $@) > /dev/null 2>&1
+	@$(CPP) $(CPP_FLAGS) -c $< -o $@ #> /dev/null 2>&1
+
+$(OBJS_D)/$(SRCS_D)/%$(OBJ_EXT): $(SRCS_D)/%$(CPP_EXT) $(INCS)
+	@$(MK) $(MK_FLAGS) $(dir $@) > /dev/null 2>&1
+	@$(CPP) $(CPP_FLAGS) -c $< -o $@ #> /dev/null 2>&1
+
+$(LIB): $(OBJS)
+	@$(AR_RCS) $(LIB) $(OBJS) > /dev/null 2>&1
+
+$(NAME): $(LIB) $(MAIN_OBJ)
+	@$(CPP) $(CPP_FLAGS) $(MAIN_OBJ) $(LIB) -o $(NAME) > /dev/null 2>&1
 
 clean:
-	@$(RM) $(OBJS_DIR)
+	@$(RM) $(RM_FLAGS) $(OBJS_D)
 
 fclean: clean
-	@$(RM) $(EXEC)
+	@$(RM) $(RM_FLAGS) $(NAME) $(LIB)
 
 re: fclean all
 
